--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,4 @@
 *.unitypackage filter=lfs diff=lfs merge=lfs -text
 *.prefab filter=lfs diff=lfs merge=lfs -text
 *.asset filter=lfs diff=lfs merge=lfs -text
+*.tar filter=lfs diff=lfs merge=lfs -text
