Update .gitignore to ignore Library and Temp folders

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 #
 /Game Engine Group Assignment/Library/
 /Game Engine Group Assignment/Temp/
+/Game Engine Group Assignment/Logs/
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
