--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 **/[Ll]ogs/
 **/[Uu]ser[Ss]ettings/
 **/UserSettings/
+/Game Engine Group Assignment/UserSettings
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
